--- a/doc/agile/sprint_backlog_88.org
+++ b/doc/agile/sprint_backlog_88.org
@@ -13,15 +13,15 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-09-25 Sun 11:00]
+#+CAPTION: Clock summary at [2016-09-25 Sun 11:28]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *87:38* |       |       | 100.0 |
+| *Total time*                                                                | *88:05* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 87:38   |       |       | 100.0 |
-| Active                                                                      |         | 87:38 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  4:10 |   4.8 |
+| Stories                                                                     | 88:05   |       |       | 100.0 |
+| Active                                                                      |         | 88:05 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  4:10 |   4.7 |
 | COMPLETED Fix chocolatey warning                                            |         |       |  0:08 |   0.2 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:27 |   0.5 |
 | COMPLETED Analysis on current state of file path generation                 |         |       |  0:57 |   1.1 |
@@ -29,12 +29,12 @@
 | COMPLETED Analysis on formatters, elements and extensibility                |         |       |  1:18 |   1.5 |
 | COMPLETED Refactor =inclusion_dependencies_provider_interface=              |         |       |  1:12 |   1.4 |
 | COMPLETED Investigate broken windows builds                                 |         |       |  0:32 |   0.6 |
-| COMPLETED Refactor path derivatives factory for usage in formatters         |         |       |  5:14 |   6.0 |
+| COMPLETED Refactor path derivatives factory for usage in formatters         |         |       |  5:14 |   5.9 |
 | COMPLETED Move file path generation to formatters                           |         |       |  1:58 |   2.2 |
-| CANCELLED Path derivatives factory generates all possible includes          |         |       |  3:07 |   3.6 |
+| CANCELLED Path derivatives factory generates all possible includes          |         |       |  3:07 |   3.5 |
 | COMPLETED Analysis on inclusion derivatives and path derivatives            |         |       |  1:04 |   1.2 |
 | COMPLETED Split path factory from provider factory                          |         |       |  2:32 |   2.9 |
-| COMPLETED Use providers when building inclusion directives                  |         |       | 12:01 |  13.7 |
+| COMPLETED Use providers when building inclusion directives                  |         |       | 12:01 |  13.6 |
 | COMPLETED Fix AppVeyor notifications                                        |         |       |  0:22 |   0.4 |
 | COMPLETED Static use of element types does more harm than good              |         |       |  0:32 |   0.6 |
 | COMPLETED Analysis: major rethink of the implementation of quilt            |         |       |  1:30 |   1.7 |
@@ -43,7 +43,7 @@
 | COMPLETED Move =cmakelists_info= to fabric                                  |         |       |  6:34 |   7.5 |
 | COMPLETED Move =odb_options_info= to fabric                                 |         |       |  1:29 |   1.7 |
 | COMPLETED Remove =formattable_origin_type=                                  |         |       |  0:17 |   0.3 |
-| COMPLETED Remove formattable origin type                                    |         |       |  2:25 |   2.8 |
+| COMPLETED Remove formattable origin type                                    |         |       |  2:25 |   2.7 |
 | COMPLETED Rename config model to options                                    |         |       |  1:07 |   1.3 |
 | COMPLETED Rename annotation to decoration in formatters model               |         |       |  0:30 |   0.6 |
 | COMPLETED Fix appveyor Visual Studio build                                  |         |       |  1:04 |   1.2 |
@@ -55,14 +55,14 @@
 | COMPLETED Consider removing the overwrite flag in =formatters::file=        |         |       |  0:22 |   0.4 |
 | COMPLETED Handle module generability in yarn                                |         |       |  0:20 |   0.4 |
 | COMPLETED Do a cursory investigation of dia plugin support                  |         |       |  0:49 |   0.9 |
-| COMPLETED Consider merging provider interface with file formatter           |         |       |  9:26 |  10.8 |
+| COMPLETED Consider merging provider interface with file formatter           |         |       |  9:26 |  10.7 |
 | COMPLETED Add type index to name and to formatter interface                 |         |       |  5:41 |   6.5 |
 | COMPLETED Rename formattables properties to configuration                   |         |       |  1:04 |   1.2 |
 | COMPLETED Update quilt.cpp with pipeline classes                            |         |       |  0:44 |   0.8 |
 | COMPLETED Add transformer to quilt.cpp                                      |         |       |  1:28 |   1.7 |
 | COMPLETED Add enabler to quilt.cpp                                          |         |       |  5:59 |   6.8 |
 | STARTED Add formattable element                                             |         |       |  0:21 |   0.4 |
-| STARTED Add includer to quilt.cpp                                           |         |       |  0:34 |   0.6 |
+| STARTED Add includer to quilt.cpp                                           |         |       |  1:01 |   1.2 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -1239,9 +1239,15 @@ Previous understanding:
 - add an enablement map for all formatters in the formatter
 
 *** STARTED Add includer to quilt.cpp                                 :story:
+    CLOCK: [2016-09-25 Sun 11:01]--[2016-09-25 Sun 11:28] =>  0:27
     CLOCK: [2016-09-25 Sun 10:26]--[2016-09-25 Sun 11:00] =>  0:34
 
 Responsible for computing the inclusion dependencies.
+
+- add a flag in builder to choose new or old API. Supply formattables
+  container by ID and new directives repository. When using old API,
+  these are default initialised. With new API the other parameters are
+  default initialised.
 
 *** Do not compute inclusion directives for system models             :story:
 
