--- a/doc/agile/sprint_backlog_89.org
+++ b/doc/agile/sprint_backlog_89.org
@@ -13,31 +13,32 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-09-27 Tue 12:14]
+#+CAPTION: Clock summary at [2016-09-27 Tue 20:54]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *13:45* |       |      | 100.0 |
+| *Total time*                                                                | *14:21* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 13:45   |       |      | 100.0 |
-| Active                                                                      |         | 13:45 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 0:49 |   5.9 |
+| Stories                                                                     | 14:21   |       |      | 100.0 |
+| Active                                                                      |         | 14:21 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 0:49 |   5.7 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:07 |   0.8 |
-| COMPLETED Generation of formattable is incorrect                            |         |       | 2:30 |  18.2 |
-| COMPLETED Visitor includes are incorrect                                    |         |       | 0:20 |   2.4 |
-| COMPLETED Add includer to quilt.cpp                                         |         |       | 1:46 |  12.8 |
-| COMPLETED Add reducer to quilt.cpp                                          |         |       | 0:22 |   2.7 |
-| COMPLETED Add new index to formtter container                               |         |       | 0:19 |   2.3 |
-| COMPLETED Add path expander to quilt.cpp                                    |         |       | 0:49 |   5.9 |
-| COMPLETED Add guard expander to quilt.cpp                                   |         |       | 0:27 |   3.3 |
-| COMPLETED Investigate borked travis build                                   |         |       | 0:37 |   4.5 |
-| COMPLETED Add decoration expander to quilt.cpp                              |         |       | 0:23 |   2.8 |
-| COMPLETED Add aspect expander to quilt.cpp                                  |         |       | 1:26 |  10.4 |
+| COMPLETED Generation of formattable is incorrect                            |         |       | 2:30 |  17.4 |
+| COMPLETED Visitor includes are incorrect                                    |         |       | 0:20 |   2.3 |
+| COMPLETED Add includer to quilt.cpp                                         |         |       | 1:46 |  12.3 |
+| COMPLETED Add reducer to quilt.cpp                                          |         |       | 0:22 |   2.6 |
+| COMPLETED Add new index to formtter container                               |         |       | 0:19 |   2.2 |
+| COMPLETED Add path expander to quilt.cpp                                    |         |       | 0:49 |   5.7 |
+| COMPLETED Add guard expander to quilt.cpp                                   |         |       | 0:27 |   3.1 |
+| COMPLETED Investigate borked travis build                                   |         |       | 0:37 |   4.3 |
+| COMPLETED Add decoration expander to quilt.cpp                              |         |       | 0:23 |   2.7 |
+| COMPLETED Add aspect expander to quilt.cpp                                  |         |       | 1:26 |  10.0 |
 | COMPLETED Run tests that are passing on windows                             |         |       | 0:10 |   1.2 |
-| COMPLETED Add helper expander to quilt.cpp                                  |         |       | 1:26 |  10.4 |
+| COMPLETED Add helper expander to quilt.cpp                                  |         |       | 1:26 |  10.0 |
 | COMPLETED Merge pre and post workflows                                      |         |       | 0:16 |   1.9 |
-| COMPLETED Fix bug in aspect and helper generation                           |         |       | 0:15 |   1.8 |
-| STARTED Investigate element annotation support                              |         |       | 1:43 |  12.5 |
+| COMPLETED Fix bug in aspect and helper generation                           |         |       | 0:15 |   1.7 |
+| COMPLETED Investigate element annotation support                            |         |       | 2:05 |  14.5 |
+| STARTED Add streaming settings expander                                     |         |       | 0:14 |   1.6 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -442,6 +443,12 @@ at the correct level in formatter configuration.
 
 Tried to add a verification step but its just too hard, what with
 shared pointers etc.
+
+*** STARTED Add streaming settings expander                           :story:
+    CLOCK: [2016-09-27 Tue 20:40]--[2016-09-27 Tue 20:54] =>  0:14
+
+Add streaming settings to the element properties and populate them via
+a new expander.
 
 *** Move facet directory to a better place                            :story:
 
