--- a/doc/agile/sprint_backlog_89.org
+++ b/doc/agile/sprint_backlog_89.org
@@ -13,36 +13,36 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-09-29 Thu 09:53]
+#+CAPTION: Clock summary at [2016-09-29 Thu 10:48]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *22:11* |       |      | 100.0 |
+| *Total time*                                                                | *22:37* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 22:11   |       |      | 100.0 |
-| Active                                                                      |         | 22:11 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 0:49 |   3.7 |
+| Stories                                                                     | 22:37   |       |      | 100.0 |
+| Active                                                                      |         | 22:37 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 0:49 |   3.6 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:07 |   0.5 |
-| COMPLETED Generation of formattable is incorrect                            |         |       | 2:30 |  11.3 |
+| COMPLETED Generation of formattable is incorrect                            |         |       | 2:30 |  11.1 |
 | COMPLETED Visitor includes are incorrect                                    |         |       | 0:20 |   1.5 |
-| COMPLETED Add includer to quilt.cpp                                         |         |       | 1:46 |   8.0 |
-| COMPLETED Add reducer to quilt.cpp                                          |         |       | 0:22 |   1.7 |
+| COMPLETED Add includer to quilt.cpp                                         |         |       | 1:46 |   7.8 |
+| COMPLETED Add reducer to quilt.cpp                                          |         |       | 0:22 |   1.6 |
 | COMPLETED Add new index to formtter container                               |         |       | 0:19 |   1.4 |
-| COMPLETED Add path expander to quilt.cpp                                    |         |       | 0:49 |   3.7 |
+| COMPLETED Add path expander to quilt.cpp                                    |         |       | 0:49 |   3.6 |
 | COMPLETED Add guard expander to quilt.cpp                                   |         |       | 0:27 |   2.0 |
-| COMPLETED Investigate borked travis build                                   |         |       | 0:37 |   2.8 |
+| COMPLETED Investigate borked travis build                                   |         |       | 0:37 |   2.7 |
 | COMPLETED Add decoration expander to quilt.cpp                              |         |       | 0:23 |   1.7 |
-| COMPLETED Add aspect expander to quilt.cpp                                  |         |       | 1:26 |   6.5 |
-| COMPLETED Run tests that are passing on windows                             |         |       | 0:10 |   0.8 |
-| COMPLETED Add helper expander to quilt.cpp                                  |         |       | 1:26 |   6.5 |
+| COMPLETED Add aspect expander to quilt.cpp                                  |         |       | 1:26 |   6.3 |
+| COMPLETED Run tests that are passing on windows                             |         |       | 0:10 |   0.7 |
+| COMPLETED Add helper expander to quilt.cpp                                  |         |       | 1:26 |   6.3 |
 | COMPLETED Merge pre and post workflows                                      |         |       | 0:16 |   1.2 |
 | COMPLETED Fix bug in aspect and helper generation                           |         |       | 0:15 |   1.1 |
-| COMPLETED Investigate element annotation support                            |         |       | 2:05 |   9.4 |
+| COMPLETED Investigate element annotation support                            |         |       | 2:05 |   9.2 |
 | CANCELLED Add streaming settings expander                                   |         |       | 0:36 |   2.7 |
-| COMPLETED Create the formattables model                                     |         |       | 1:32 |   6.9 |
-| COMPLETED Hook formattables into formatters                                 |         |       | 3:58 |  17.9 |
-| COMPLETED Remove include builder legacy classes                             |         |       | 1:09 |   5.2 |
-| STARTED Review main classes in quilt.cpp                                    |         |       | 0:45 |   3.4 |
+| COMPLETED Create the formattables model                                     |         |       | 1:32 |   6.8 |
+| COMPLETED Hook formattables into formatters                                 |         |       | 3:58 |  17.5 |
+| COMPLETED Remove include builder legacy classes                             |         |       | 1:09 |   5.1 |
+| STARTED Review main classes in quilt.cpp                                    |         |       | 1:11 |   5.2 |
 | STARTED Remove formatter id                                                 |         |       | 0:04 |   0.3 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -520,6 +520,7 @@ Includes:
 - repositories, repository factories in formattables, annotations.
 
 *** STARTED Review main classes in quilt.cpp                          :story:
+    CLOCK: [2016-09-29 Thu 10:21]--[2016-09-29 Thu 10:47] =>  0:26
     CLOCK: [2016-09-29 Thu 09:42]--[2016-09-29 Thu 09:53] =>  0:11
     CLOCK: [2016-09-29 Thu 09:07]--[2016-09-29 Thu 09:41] =>  0:34
 
@@ -543,6 +544,12 @@ should be at the element level.
 
 Figure out if element configuration is context or if it is better
 expressed as a stand alone formatting parameter.
+
+*** Formatter repository should be created in quilt                   :story:
+
+At present we are creating the formatter repository in
+=quilt.cpp=. However it will be shared by all backends in the
+kernel. Move it up to =quilt= level and supply it as a paramter to the backends.
 
 *** Clean up element segmentation                                     :story:
 
