--- a/doc/agile/sprint_backlog_89.org
+++ b/doc/agile/sprint_backlog_89.org
@@ -13,36 +13,36 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-09-29 Thu 10:48]
+#+CAPTION: Clock summary at [2016-09-29 Thu 14:34]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *22:37* |       |      | 100.0 |
+| *Total time*                                                                | *23:21* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 22:37   |       |      | 100.0 |
-| Active                                                                      |         | 22:37 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 0:49 |   3.6 |
+| Stories                                                                     | 23:21   |       |      | 100.0 |
+| Active                                                                      |         | 23:21 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 0:49 |   3.5 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:07 |   0.5 |
-| COMPLETED Generation of formattable is incorrect                            |         |       | 2:30 |  11.1 |
-| COMPLETED Visitor includes are incorrect                                    |         |       | 0:20 |   1.5 |
-| COMPLETED Add includer to quilt.cpp                                         |         |       | 1:46 |   7.8 |
+| COMPLETED Generation of formattable is incorrect                            |         |       | 2:30 |  10.7 |
+| COMPLETED Visitor includes are incorrect                                    |         |       | 0:20 |   1.4 |
+| COMPLETED Add includer to quilt.cpp                                         |         |       | 1:46 |   7.6 |
 | COMPLETED Add reducer to quilt.cpp                                          |         |       | 0:22 |   1.6 |
 | COMPLETED Add new index to formtter container                               |         |       | 0:19 |   1.4 |
-| COMPLETED Add path expander to quilt.cpp                                    |         |       | 0:49 |   3.6 |
-| COMPLETED Add guard expander to quilt.cpp                                   |         |       | 0:27 |   2.0 |
-| COMPLETED Investigate borked travis build                                   |         |       | 0:37 |   2.7 |
-| COMPLETED Add decoration expander to quilt.cpp                              |         |       | 0:23 |   1.7 |
-| COMPLETED Add aspect expander to quilt.cpp                                  |         |       | 1:26 |   6.3 |
+| COMPLETED Add path expander to quilt.cpp                                    |         |       | 0:49 |   3.5 |
+| COMPLETED Add guard expander to quilt.cpp                                   |         |       | 0:27 |   1.9 |
+| COMPLETED Investigate borked travis build                                   |         |       | 0:37 |   2.6 |
+| COMPLETED Add decoration expander to quilt.cpp                              |         |       | 0:23 |   1.6 |
+| COMPLETED Add aspect expander to quilt.cpp                                  |         |       | 1:26 |   6.1 |
 | COMPLETED Run tests that are passing on windows                             |         |       | 0:10 |   0.7 |
-| COMPLETED Add helper expander to quilt.cpp                                  |         |       | 1:26 |   6.3 |
-| COMPLETED Merge pre and post workflows                                      |         |       | 0:16 |   1.2 |
+| COMPLETED Add helper expander to quilt.cpp                                  |         |       | 1:26 |   6.1 |
+| COMPLETED Merge pre and post workflows                                      |         |       | 0:16 |   1.1 |
 | COMPLETED Fix bug in aspect and helper generation                           |         |       | 0:15 |   1.1 |
-| COMPLETED Investigate element annotation support                            |         |       | 2:05 |   9.2 |
-| CANCELLED Add streaming settings expander                                   |         |       | 0:36 |   2.7 |
-| COMPLETED Create the formattables model                                     |         |       | 1:32 |   6.8 |
-| COMPLETED Hook formattables into formatters                                 |         |       | 3:58 |  17.5 |
-| COMPLETED Remove include builder legacy classes                             |         |       | 1:09 |   5.1 |
-| STARTED Review main classes in quilt.cpp                                    |         |       | 1:11 |   5.2 |
+| COMPLETED Investigate element annotation support                            |         |       | 2:05 |   8.9 |
+| CANCELLED Add streaming settings expander                                   |         |       | 0:36 |   2.6 |
+| COMPLETED Create the formattables model                                     |         |       | 1:32 |   6.6 |
+| COMPLETED Hook formattables into formatters                                 |         |       | 3:58 |  17.0 |
+| COMPLETED Remove empty context                                              |         |       | 1:09 |   4.9 |
+| STARTED Review main classes in quilt.cpp                                    |         |       | 1:55 |   8.2 |
 | STARTED Remove formatter id                                                 |         |       | 0:04 |   0.3 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -502,7 +502,7 @@ with the current formatting workflow.
 We were generating empty contexts before in context factory, but this
 should not be required any longer.
 
-*** COMPLETED Remove include builder legacy classes                   :story:
+<*** COMPLETED Remove include builder legacy classes                   :story:
     CLOSED: [2016-09-28 Wed 22:48]
     CLOCK: [2016-09-28 Wed 22:22]--[2016-09-28 Wed 22:48] =>  0:26
     CLOCK: [2016-09-28 Wed 21:38]--[2016-09-28 Wed 22:21] =>  0:43
@@ -520,6 +520,7 @@ Includes:
 - repositories, repository factories in formattables, annotations.
 
 *** STARTED Review main classes in quilt.cpp                          :story:
+    CLOCK: [2016-09-29 Thu 13:50]--[2016-09-29 Thu 14:34] =>  0:44
     CLOCK: [2016-09-29 Thu 10:21]--[2016-09-29 Thu 10:47] =>  0:26
     CLOCK: [2016-09-29 Thu 09:42]--[2016-09-29 Thu 09:53] =>  0:11
     CLOCK: [2016-09-29 Thu 09:07]--[2016-09-29 Thu 09:41] =>  0:34
@@ -535,10 +536,12 @@ Not clear why we need this given we have formatter name.
 Actually this requires a little bit of thinking as we use the id's in
 the helper formatters.
 
-*** Move enabled formatters to element configuration                  :story:
+*** Move enabled formatters to a higher level                         :story:
 
 At present we have =enabled_formatters= at the formatter level. This
-should be at the element level.
+should be at the element level. It can't be model level because
+eventually we will have different enablement configurations for each
+formatter.
 
 *** Consider supplying element configuration as a parameter           :story:
 
