--- a/doc/agile/sprint_backlog_89.org
+++ b/doc/agile/sprint_backlog_89.org
@@ -13,36 +13,36 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-09-29 Thu 14:34]
+#+CAPTION: Clock summary at [2016-09-30 Fri 11:10]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *23:21* |       |      | 100.0 |
+| *Total time*                                                                | *25:08* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 23:21   |       |      | 100.0 |
-| Active                                                                      |         | 23:21 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 0:49 |   3.5 |
+| Stories                                                                     | 25:08   |       |      | 100.0 |
+| Active                                                                      |         | 25:08 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 0:49 |   3.2 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:07 |   0.5 |
-| COMPLETED Generation of formattable is incorrect                            |         |       | 2:30 |  10.7 |
-| COMPLETED Visitor includes are incorrect                                    |         |       | 0:20 |   1.4 |
-| COMPLETED Add includer to quilt.cpp                                         |         |       | 1:46 |   7.6 |
-| COMPLETED Add reducer to quilt.cpp                                          |         |       | 0:22 |   1.6 |
-| COMPLETED Add new index to formtter container                               |         |       | 0:19 |   1.4 |
-| COMPLETED Add path expander to quilt.cpp                                    |         |       | 0:49 |   3.5 |
-| COMPLETED Add guard expander to quilt.cpp                                   |         |       | 0:27 |   1.9 |
-| COMPLETED Investigate borked travis build                                   |         |       | 0:37 |   2.6 |
-| COMPLETED Add decoration expander to quilt.cpp                              |         |       | 0:23 |   1.6 |
-| COMPLETED Add aspect expander to quilt.cpp                                  |         |       | 1:26 |   6.1 |
+| COMPLETED Generation of formattable is incorrect                            |         |       | 2:30 |   9.9 |
+| COMPLETED Visitor includes are incorrect                                    |         |       | 0:20 |   1.3 |
+| COMPLETED Add includer to quilt.cpp                                         |         |       | 1:46 |   7.0 |
+| COMPLETED Add reducer to quilt.cpp                                          |         |       | 0:22 |   1.5 |
+| COMPLETED Add new index to formtter container                               |         |       | 0:19 |   1.3 |
+| COMPLETED Add path expander to quilt.cpp                                    |         |       | 0:49 |   3.2 |
+| COMPLETED Add guard expander to quilt.cpp                                   |         |       | 0:27 |   1.8 |
+| COMPLETED Investigate borked travis build                                   |         |       | 0:37 |   2.5 |
+| COMPLETED Add decoration expander to quilt.cpp                              |         |       | 0:23 |   1.5 |
+| COMPLETED Add aspect expander to quilt.cpp                                  |         |       | 1:26 |   5.7 |
 | COMPLETED Run tests that are passing on windows                             |         |       | 0:10 |   0.7 |
-| COMPLETED Add helper expander to quilt.cpp                                  |         |       | 1:26 |   6.1 |
+| COMPLETED Add helper expander to quilt.cpp                                  |         |       | 1:26 |   5.7 |
 | COMPLETED Merge pre and post workflows                                      |         |       | 0:16 |   1.1 |
-| COMPLETED Fix bug in aspect and helper generation                           |         |       | 0:15 |   1.1 |
-| COMPLETED Investigate element annotation support                            |         |       | 2:05 |   8.9 |
-| CANCELLED Add streaming settings expander                                   |         |       | 0:36 |   2.6 |
-| COMPLETED Create the formattables model                                     |         |       | 1:32 |   6.6 |
-| COMPLETED Hook formattables into formatters                                 |         |       | 3:58 |  17.0 |
-| COMPLETED Remove empty context                                              |         |       | 1:09 |   4.9 |
-| STARTED Review main classes in quilt.cpp                                    |         |       | 1:55 |   8.2 |
+| COMPLETED Fix bug in aspect and helper generation                           |         |       | 0:15 |   1.0 |
+| COMPLETED Investigate element annotation support                            |         |       | 2:05 |   8.3 |
+| CANCELLED Add streaming settings expander                                   |         |       | 0:36 |   2.4 |
+| COMPLETED Create the formattables model                                     |         |       | 1:32 |   6.1 |
+| COMPLETED Hook formattables into formatters                                 |         |       | 3:58 |  15.8 |
+| COMPLETED Remove empty context                                              |         |       | 1:09 |   4.6 |
+| COMPLETED Review main classes in quilt.cpp                                  |         |       | 3:42 |  14.7 |
 | STARTED Remove formatter id                                                 |         |       | 0:04 |   0.3 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -519,7 +519,10 @@ Includes:
 
 - repositories, repository factories in formattables, annotations.
 
-*** STARTED Review main classes in quilt.cpp                          :story:
+*** COMPLETED Review main classes in quilt.cpp                        :story:
+    CLOSED: [2016-09-30 Fri 10:57]
+    CLOCK: [2016-09-30 Fri 10:10]--[2016-09-30 Fri 10:57] =>  0:47
+    CLOCK: [2016-09-29 Thu 16:30]--[2016-09-29 Thu 17:30] =>  1:00
     CLOCK: [2016-09-29 Thu 13:50]--[2016-09-29 Thu 14:34] =>  0:44
     CLOCK: [2016-09-29 Thu 10:21]--[2016-09-29 Thu 10:47] =>  0:26
     CLOCK: [2016-09-29 Thu 09:42]--[2016-09-29 Thu 09:53] =>  0:11
